feat: дописаны юнит тесты